fixes bug in IE7: extra spacing between LIs

--- a/rcarousel/css/rcarousel.css
+++ b/rcarousel/css/rcarousel.css
@@ -12,9 +12,11 @@
 	width: 300px
 }
 
-.rcarousel .wrapper ul li a img {
+.rcarousel .wrapper ul li img {
 	border: 0;
+	clear: left;
 	display: block;
+	float: left;
 }
 
 .rcarousel .wrapper ul {
